--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eth-lightwallet": "^2.5.6",
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.11",
+    "redux": "^3.7.2",
+    "underscore": "^1.8.3",
     "web3": "^1.0.0-beta.18"
   },
   "scripts": {
