--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apisauce": "^0.14.1",
+    "babel-polyfill": "^6.26.0",
     "eth-lightwallet": "^2.5.6",
     "moment": "^2.18.1",
     "react": "^15.6.1",
@@ -11,6 +12,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.11",
     "redux": "^3.7.2",
+    "redux-persist": "^4.9.1",
     "redux-saga": "^0.15.6",
     "underscore": "^1.8.3",
     "web3": "^1.0.0-beta.18"
