--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bip39": "^2.4.0",
     "eth-lightwallet": "^2.5.6",
     "moment": "^2.18.1",
+    "qrcode-js": "0.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
