--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "redux-persist": "^4.9.1",
     "redux-saga": "^0.15.6",
     "underscore": "^1.8.3",
-    "web3": "^1.0.0-beta.18"
+    "web3": "1.0.0-beta.18"
   },
   "scripts": {
     "start": "react-scripts start",
